--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "graphql": "16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-test-renderer": "^18.3.1"
+    "react-test-renderer": "^18.3.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.10"
   },
   "scripts": {
     "start": "webpack-dev-server --hot --mode development --host 0.0.0.0",
